Bug 96454 - EDITING: default arrow size of the connectors is not configurable
Summary: EDITING: default arrow size of the connectors is not configurable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0 target:26.2.4
Keywords:
Depends on:
Blocks: Connectors Arrow_Style
  Show dependency treegraph
 
Reported: 2015-12-13 06:51 UTC by csongor
Modified: 2026-04-22 06:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
the new redish connector doesn't have the adjuste arrow head size (10.58 KB, application/vnd.oasis.opendocument.graphics)
2015-12-13 06:51 UTC, csongor
Details
Connector example with LibO Fresh (41.56 KB, image/png)
2016-04-29 09:36 UTC, Heiko Tietze
Details
SAL_LOG=1 output from a dbgutil build while reproducing (427.72 KB, application/x-7z-compressed)
2016-04-30 06:26 UTC, Buovjaga
Details
Sample of modified Arrow Style XML config (7.44 KB, text/plain)
2017-08-30 22:27 UTC, Milan Oparnica
Details

Note You need to log in before you can comment on or make changes to this bug.
Description csongor 2015-12-13 06:51:05 UTC
Created attachment 121254 [details]
the new redish connector doesn't have the adjuste arrow head size

When I create a draw with two boxes and a connector between them then some of the default settings of the connector I can change. However, not everything. 

Example:

- I start a new Drawing
- I create two rectangles from the Drawing toolbar
- I start a new connector "Straight Connector ends with Arrow" from the Drawing toolbar
- Keeping the arrow selected, the Format -> Line dialog tells that the connector is black, the arrow head width is 0.30 cm.

After cancelling this dialog, I click to the white area in order to unselect everything.

- In the Format -> Line dialog I change some settings:
a) Style: Continuous -> Fine Dased
b) Color: Tango Sky Blue 2 -> Salmon
c) Width: 0 -> 0.20 cm
d) Transparency: 0 -> 75%
e) End style: None -> Arrow
f) (end) Width: 0.5cm -> 5.0 cm (yes, it's huge, just for illustration)
- After pressing OK, I create a new connector from the first rectangle.

The result is a connector which has the Fine Dashed style, Salmon color, etc., almost everything looks as I set it up, apart from the arrow head which has a size 0.6cm instead of the adjusted 5cm (and instead of the original 0.5cm).

If I draw a line instead of connector then the arrow head is the adjusted huge one. But in case of connector the default size of the arrow head cannot be adjusted.

Or, is this not the dedicated way how I should change the default arrow size?
Comment 1 Buovjaga 2015-12-16 10:02:34 UTC
Reproduced from scratch.

Formatting it after the creation results in an ok head.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 014633f83e44ae8ba33087b6f38e8e253e281969
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-15_06:21:44
Locale: fi-FI (fi_FI)
Comment 2 jlpoissonnet 2016-02-25 18:57:31 UTC
Encountered the bug, more specifically concerning the arrow width.

Tried the following on the END Arrow:

1) When nothing is selected, changed the Arrow width in the Format->Line menu;
2) Changed the Arrow width in the style of the connector (Object without fill);

No success, when drawing new connectors the default arrow size doesn't change.

Interesting fact: I tried the same steps on the START Arrow and it worked as it should.

Conclusion: it seems the bug only occurs with the END Arrow style.
Comment 3 Heiko Tietze 2016-04-29 09:36:02 UTC
Created attachment 124719 [details]
Connector example with LibO Fresh

Check this issue with LibO Fresh v5.1.2.2.0+ (Arch Linux). Changing the line width affects the arrow size. Setting arrow size explicitly sets it for both start as well as the end as expected. Guess the issue has been fixed recently, does it?
Comment 4 Buovjaga 2016-04-29 10:13:18 UTC
Heiko: you have to do the changes in Format - Line when you have selected the "Straight connector with arrow" tool and not yet drawn the arrow.
I still reproduce the problem.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha1+
Build ID: 29c4f7bd5863e34c449062aca6f8aee5ec7510a2
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on April 28th 2016
Comment 5 Buovjaga 2016-04-30 06:26:38 UTC
Created attachment 124745 [details]
SAL_LOG=1 output from a dbgutil build while reproducing

I did:
SAL_LOG=1 libreoffice/instdir/program/soffice > drawconnector.txt 2>&1

Maybe it will help as some developers cannot reproduce.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha1+
Build ID: b1d4f658aa927ef0d62ffc387ab9593ad5dd8b3b
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on April 29th 2016
Comment 6 csongor 2016-04-30 08:46:09 UTC
I re-tested it with my installed version:

Version: 5.1.2.2
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f

It is still wrong. If some developers need more precise description of the steps then here you are. 

- open LO Draw
- click the Rectangle on the Drawing toolbar
- draw a rectangle on the page
- click the Rectangle on the Drawing toolbar
- draw a second rectangle on the page (not overlapping with the previous one)
- click the drop-down arrow of the Connector icon on the Drawing toolbar
- select "Straight Connector with Arrows" (don't draw the connector!)
- go to the Format -> Line dialog
- modify the arrow parameters as describe in the first comment (Fine Dashed, Salmon, ..., End Style = Arrow, (End) Width = 5cm 
- close the dialog with OK
- connect the two rectangles with this double arrowed connector. 

The arrow reflects the settings (fine dashed, salmon colour, etc.) but the arrow head is too small.

- click to select the salmon connector
- open the format => Line dialog again
- check the arrow end size. It is "0.30 cm" instead of "5 cm" what I adjusted.
Comment 7 Buovjaga 2016-04-30 08:51:46 UTC
(In reply to csongor from comment #6)
> - modify the arrow parameters as describe in the first comment (Fine Dashed,
> Salmon, ..., End Style = Arrow, (End) Width = 5cm 

Btw. only these changes are needed: End Style = Arrow, (End) Width = 5cm
Comment 8 QA Administrators 2017-05-22 13:38:33 UTC Comment hidden (obsolete)
Comment 9 csongor 2017-05-31 16:17:42 UTC
I tested the bug according to the more detailed description I provided in my comment 2016-04-30 08:46:09 UTC. I used it instead of the steps from the original bug report because they are easier to follow.

Unfortunately the bug is still present, the arrow head does not change according to the new settings while the other line parameters do.
Comment 10 Milan Oparnica 2017-08-30 22:27:29 UTC
Created attachment 135888 [details]
Sample of modified Arrow Style XML config
Comment 11 Milan Oparnica 2017-08-30 22:31:10 UTC
This affects Impress too. 

It seems that Connector is somehow "hard-coded" to use the Arrow Style "Arrow"  automatically when first put on the drawing/slide.

Assuming this, I've managed to make a workaround:

1. Click on menu "Format > Object and Shape > Line"

2. Click on tab "Arrow Styles"

3. Just click on button "Save arrow styles", you will be asked for a location to save "standard.soe" XML configuration file. Default location is ~/.config/libreoffice/4/user/config. Save the file and remember the location.

4. Open the file with default plain text editor, or XML editor. There are a lot of <draw:marker ... /> nodes in it.

5. The trick is that Connector always uses the arrow defined by node with draw:name="Arrow". You can switch this name with any other node you want as default Connector Arrow Style.

For example, I wanted the "Symmetric Arrow" to be used as default, so I switched entries:

<draw:marker draw:name="Arrow" svg:viewBox="0 0 20 30" svg:d="M10 0l-10 30h20z"/>

and 

<draw:marker draw:name="Symmetric_20_Arrow" draw:display-name="Symmetric Arrow" svg:viewBox="0 0 1131 902" svg:d="M564 0l-564 902h1131z"/>

to:

<draw:marker draw:name="Symmetric_20_Arrow" draw:display-name="Symmetric Arrow" svg:viewBox="0 0 20 30" svg:d="M10 0l-10 30h20z"/>

and 

<draw:marker draw:name="Arrow" draw:display-name="Arrow" svg:viewBox="0 0 1131 902" svg:d="M564 0l-564 902h1131z"/>

I'm including the complete modified "standard.soe" file in attachment.

Now I have my Connectors draw out as desired.

This is not a replacement for full implementation of Style Management with Connectors, but it will make waiting for it to happen easier.
Comment 12 Milan Oparnica 2017-08-30 22:32:34 UTC
Forgot to mention, version of my LO is 5.4.0.3 (Linux)
Comment 13 QA Administrators 2018-08-31 02:42:25 UTC Comment hidden (obsolete)
Comment 14 csongor 2018-08-31 07:20:56 UTC
Tested and replicated in this version:

Version: 6.1.0.3
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; 
Locale: en-US (en.UTF-8); Calc: group threaded

So, the bug is still present, hasn't been fixed yet.
Comment 15 QA Administrators 2019-09-02 09:23:33 UTC Comment hidden (obsolete)
Comment 16 csongor 2019-09-02 12:36:35 UTC
I checked with my newest installation:

Version: 6.3.0.4 (x64)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-AU (en_AU); UI-Language: en-US
Calc: CL

The bug is still there, the new arrow head size of the _connector_ is 0.6 instead of 5.0 (adjusted value) or 0.5 (original value).

The arrow head size of a _line_ looks good, its size is 5.0.
Comment 17 Regina Henschel 2022-11-27 17:06:18 UTC
connector arrow head still behaves different from line arrow head. Tested with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17dfc9a9da009cc23d2222e3fb4e2cef9c97d581
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded
Comment 18 QA Administrators 2024-11-27 03:16:18 UTC Comment hidden (obsolete)
Comment 19 go2null 2025-05-08 18:37:29 UTC
I can no longer find the option to change the connector size.

The line __thickness__ controls the connector arrowhead, which is not a good design as the arrowheads get really huge.


---
Version: 25.2.2.2 (x86) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-CA (en_US); UI: en-US
Calc: CL threaded
Comment 20 go2null 2025-05-08 18:41:26 UTC
Found the setting in the __Line__ dialog box (it is not present in the __Properties__sidebar.

The setting (__Width__ in the dialog box) works.
Comment 21 Buovjaga 2025-05-08 18:47:18 UTC
(In reply to go2null from comment #20)
> Found the setting in the __Line__ dialog box (it is not present in the
> __Properties__sidebar.
> 
> The setting (__Width__ in the dialog box) works.

You do not clearly state, if you followed the steps in comment 6 / comment 7, so let's revert the status change until others have time to test.
Comment 22 Buovjaga 2025-05-09 08:48:41 UTC
(In reply to Buovjaga from comment #21)
> (In reply to go2null from comment #20)
> > Found the setting in the __Line__ dialog box (it is not present in the
> > __Properties__sidebar.
> > 
> > The setting (__Width__ in the dialog box) works.
> 
> You do not clearly state, if you followed the steps in comment 6 / comment
> 7, so let's revert the status change until others have time to test.

Just tested and I still reproduce.

Note for testers: until bug 163531 is fixed, you have to be careful with the style. "Arrow" works.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b710ba48503372ddaf10a17ce7f4f3340bc8adb8
CPU threads: 8; OS: Linux 6.14; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 7 May 2025
Comment 23 go2null 2025-05-09 14:58:42 UTC
Update after following the steps in OP

---

- I start a new Drawing
- I create two rectangles from the Drawing toolbar
- I start a new connector "Straight Connector ends with Arrow" from the Drawing toolbar
- Keeping the arrow selected, the Format -> Line dialog tells that the connector is black, the arrow head width is 0.30 cm.
  * [go2null] in mine, the default color was "Tango Sky Blue 2".  The default size was the same at 0.30 cm


After cancelling this dialog, I click to the white area in order to unselect everything.

- In the Format -> Line dialog I change some settings:
a) Style: Continuous -> Fine Dased
b) Color: Tango Sky Blue 2 -> Salmon
  * [go2null] changed to Tango Chameleon 3
c) Width: 0 -> 0.20 cm
  * [go2null] this is labelled "Thickness"
d) Transparency: 0 -> 75%
e) End style: None -> Arrow
f) (end) Width: 0.5cm -> 5.0 cm (yes, it's huge, just for illustration)
- After pressing OK, I create a new connector from the first rectangle.

The result is a connector which has the Fine Dashed style, Salmon color, etc., almost everything looks as I set it up, apart from the arrow head which has a size 0.6cm instead of the adjusted 5cm (and instead of the original 0.5cm).
  * [go2null] I observed the same; so I guess this bug is not fixed.
Comment 24 Commit Notification 2026-03-23 18:43:21 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/715004c51b1ffa74e762d88fd551f3a59baaf2ee

tdf#96454, tdf#126823 - Retrieve default arrow sizes for start/end widths

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Andreas Heinisch 2026-03-23 18:45:46 UTC
The error has been fixed. However this report still needs an automated unit test to be closed. I will provide it when my spare time allows it.
Comment 26 Commit Notification 2026-03-24 09:37:10 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c814f36d8cde023c098eeae860c8a4aa68d1321

tdf#96454 - Add test for arrow sizes for start/end widths using a style sheet

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2026-04-22 06:49:35 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d90ad05c466d392ca4a222c8b5dafdf58af769e1

tdf#96454, tdf#126823 - Retrieve default arrow sizes for start/end widths

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2026-04-22 06:58:47 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/0b8b3de5c3a8242a79a7e680984b313cb8dfc884

tdf#96454 - Add test for arrow sizes for start/end widths using a style sheet

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.