tdf#96454, tdf#126823 - Retrieve default arrow sizes for start/end widths

Change-Id: Ia224edb015ff15e033ad266bcc172c18be28505d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201982
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/204050